tests/paczka1/fuzzy1/74778506.err
Error in line 8: NlI8mXLP9 A87 77,0
Error in line 1: SIiy73IYl3o A620 30,4
Error in line 20: NlI8mXLP9 A620 46,58
Error in line 7: 2kZRndIw A620 81,7
Error in line 23: 2kZRndIw A130 24,3
Error in line 22: A410 A130 63,3
Error in line 28: A410 A620 25,1
